--- a/appspec.yml
+++ b/appspec.yml
@@ -3,17 +3,11 @@ os: linux
 
 files:
   - source: /
-    destination: /home/ubuntu
+    destination: /home/ubuntu/demo-node
 hooks:
-  BeforeInstall:
-    - location: scripts/before_install.sh
-      timeout: 300
-      runas: ubuntu
   AfterInstall:
     - location: scripts/install.sh
       timeout: 300
-      runas: ubuntu
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
-      runas: ubuntu
