--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,3 +15,9 @@ phases:
   post_build:
     commands:
       - echo Build completed on date
+artifacts:
+  files:
+    - '**/*'
+  base-directory: base_location
+  name: artifact
+  discard-paths: no
