--- a/appspec.yml
+++ b/appspec.yml
@@ -8,6 +8,8 @@ hooks:
   AfterInstall:
     - location: scripts/install.sh
       timeout: 300
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 300
+      runas: ubuntu
